src/core/generated-parser/rulePadGrammarParser.js
// Generated from rulePadGrammar.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var rulePadGrammarListener = require('./rulePadGrammarListener').rulePadGrammarListener;
var grammarFileName = "rulePadGrammar.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'\"'", "'||'", "'&&'", "'!'", "'...'", "'!...'", 
                     "'.'", "'='", "'>'", "'<'", "','", "'''", "'&'", "'No Constructor'", 
                     "'No Function'", "'Empty Body'", "'No Parameter'", 
                     "'Initialization'", "'Calling Constructor: '", "'Calling Function: '", 
                     "'Modifying Field: '", "'Calling a Function With Argument: '", 
                     "'Initialized by Calling Function: '", "'Initialized by Calling a Function With Argument: '", 
                     "'Initialized with: '", "'Caller: '", "'Assigned Value: '", 
                     "'must '", "'of '", "'and '", "'or '", "'have '", "'with '", 
                     null, null, null, "'('", "')'", "'name '", "'annotation '", 
                     "'extension '", "'Superclass'", "'implementation '", 
                     "'Interface '", "'function '", "'abstract function '", 
                     "'constructor '", "'parameter '", "'type '", "'specifier '", 
                     "'visibility '", "'return value '", "'declaration statement '", 
                     "'expression statement '", "'value '", "'initial value '", 
                     "'class '", "'subclass '" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "SPACE", 
                      "Alphabet", "NL", "LPAREN", "RPAREN", "NAME", "ANNOTATION", 
                      "EXTENSION", "SUPERCLASS", "IMPLEMENTATION", "INTERFACE", 
                      "FUNCTION", "AbstractFunctions", "CONSTRUCTOR", "PARAMETER", 
                      "TYPES", "SPECIFIER", "VISIBILITY", "ReturnValue", 
                      "DeclarationStatement", "ExpressionStatement", "VALUE", 
                      "InitialValue", "CLASSES", "SUBCLASSES" ];

var ruleNames =  [ "inputSentence", "mustClause", "words", "word", "combinatorialWords", 
                   "symbols", "end", "emptyLine", "identifier", "identifiers", 
                   "commentPrefix", "comments", "must", "of", "and", "or", 
                   "have", "withWord", "binary", "names", "nameCondition", 
                   "annotations", "annotationCondition", "extensions", "extensionCondition", 
                   "implementations", "implementationCondition", "functions", 
                   "functionOf", "functionCondition", "functionExpression", 
                   "abstractFunctions", "abstractFunctionOf", "abstractFunctionCondition", 
                   "abstractFunctionExpression", "constructors", "constructorOf", 
                   "constructorCondition", "constructorExpression", "parameters", 
                   "parameterCondition", "parameterExpression", "types", 
                   "typeCondition", "specifiers", "specifierCondition", 
                   "visibilities", "visibilityCondition", "returnValues", 
                   "returnValueCondition", "declarationStatements", "declarationStatementOf", 
                   "declarationStatementCondition", "declarationStatementExpression", 
                   "expressionStatements", "expressionStatementOf", "expressionStatementCondition", 
                   "expressionStatementExpression", "value", "valueCondition", 
                   "initialValues", "initialValueOf", "initialValueCondition", 
                   "classes", "classCondition", "classExpression", "subclasses", 
                   "subclassOf", "subclassCondition", "subclassExpression" ];

function rulePadGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

rulePadGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
rulePadGrammarParser.prototype.constructor = rulePadGrammarParser;

Object.defineProperty(rulePadGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

rulePadGrammarParser.EOF = antlr4.Token.EOF;
rulePadGrammarParser.T__0 = 1;
rulePadGrammarParser.T__1 = 2;
rulePadGrammarParser.T__2 = 3;
rulePadGrammarParser.T__3 = 4;
rulePadGrammarParser.T__4 = 5;
rulePadGrammarParser.T__5 = 6;
rulePadGrammarParser.T__6 = 7;
rulePadGrammarParser.T__7 = 8;
rulePadGrammarParser.T__8 = 9;
rulePadGrammarParser.T__9 = 10;
rulePadGrammarParser.T__10 = 11;
rulePadGrammarParser.T__11 = 12;
rulePadGrammarParser.T__12 = 13;
rulePadGrammarParser.T__13 = 14;
rulePadGrammarParser.T__14 = 15;
rulePadGrammarParser.T__15 = 16;
rulePadGrammarParser.T__16 = 17;
rulePadGrammarParser.T__17 = 18;
rulePadGrammarParser.T__18 = 19;
rulePadGrammarParser.T__19 = 20;
rulePadGrammarParser.T__20 = 21;
rulePadGrammarParser.T__21 = 22;
rulePadGrammarParser.T__22 = 23;
rulePadGrammarParser.T__23 = 24;
rulePadGrammarParser.T__24 = 25;
rulePadGrammarParser.T__25 = 26;
rulePadGrammarParser.T__26 = 27;
rulePadGrammarParser.T__27 = 28;
rulePadGrammarParser.T__28 = 29;
rulePadGrammarParser.T__29 = 30;
rulePadGrammarParser.T__30 = 31;
rulePadGrammarParser.T__31 = 32;
rulePadGrammarParser.T__32 = 33;
rulePadGrammarParser.SPACE = 34;
rulePadGrammarParser.Alphabet = 35;
rulePadGrammarParser.NL = 36;
rulePadGrammarParser.LPAREN = 37;
rulePadGrammarParser.RPAREN = 38;
rulePadGrammarParser.NAME = 39;
rulePadGrammarParser.ANNOTATION = 40;
rulePadGrammarParser.EXTENSION = 41;
rulePadGrammarParser.SUPERCLASS = 42;
rulePadGrammarParser.IMPLEMENTATION = 43;
rulePadGrammarParser.INTERFACE = 44;
rulePadGrammarParser.FUNCTION = 45;
rulePadGrammarParser.AbstractFunctions = 46;
rulePadGrammarParser.CONSTRUCTOR = 47;
rulePadGrammarParser.PARAMETER = 48;
rulePadGrammarParser.TYPES = 49;
rulePadGrammarParser.SPECIFIER = 50;
rulePadGrammarParser.VISIBILITY = 51;
rulePadGrammarParser.ReturnValue = 52;
rulePadGrammarParser.DeclarationStatement = 53;
rulePadGrammarParser.ExpressionStatement = 54;
rulePadGrammarParser.VALUE = 55;
rulePadGrammarParser.InitialValue = 56;
rulePadGrammarParser.CLASSES = 57;
rulePadGrammarParser.SUBCLASSES = 58;

rulePadGrammarParser.RULE_inputSentence = 0;
rulePadGrammarParser.RULE_mustClause = 1;
rulePadGrammarParser.RULE_words = 2;
rulePadGrammarParser.RULE_word = 3;
rulePadGrammarParser.RULE_combinatorialWords = 4;
rulePadGrammarParser.RULE_symbols = 5;
rulePadGrammarParser.RULE_end = 6;
rulePadGrammarParser.RULE_emptyLine = 7;
rulePadGrammarParser.RULE_identifier = 8;
rulePadGrammarParser.RULE_identifiers = 9;
rulePadGrammarParser.RULE_commentPrefix = 10;
rulePadGrammarParser.RULE_comments = 11;
rulePadGrammarParser.RULE_must = 12;
rulePadGrammarParser.RULE_of = 13;
rulePadGrammarParser.RULE_and = 14;
rulePadGrammarParser.RULE_or = 15;
rulePadGrammarParser.RULE_have = 16;
rulePadGrammarParser.RULE_withWord = 17;
rulePadGrammarParser.RULE_binary = 18;
rulePadGrammarParser.RULE_names = 19;
rulePadGrammarParser.RULE_nameCondition = 20;
rulePadGrammarParser.RULE_annotations = 21;
rulePadGrammarParser.RULE_annotationCondition = 22;
rulePadGrammarParser.RULE_extensions = 23;
rulePadGrammarParser.RULE_extensionCondition = 24;
rulePadGrammarParser.RULE_implementations = 25;
rulePadGrammarParser.RULE_implementationCondition = 26;
rulePadGrammarParser.RULE_functions = 27;
rulePadGrammarParser.RULE_functionOf = 28;
rulePadGrammarParser.RULE_functionCondition = 29;
rulePadGrammarParser.RULE_functionExpression = 30;
rulePadGrammarParser.RULE_abstractFunctions = 31;
rulePadGrammarParser.RULE_abstractFunctionOf = 32;
rulePadGrammarParser.RULE_abstractFunctionCondition = 33;
rulePadGrammarParser.RULE_abstractFunctionExpression = 34;
rulePadGrammarParser.RULE_constructors = 35;
rulePadGrammarParser.RULE_constructorOf = 36;
rulePadGrammarParser.RULE_constructorCondition = 37;
rulePadGrammarParser.RULE_constructorExpression = 38;
rulePadGrammarParser.RULE_parameters = 39;
rulePadGrammarParser.RULE_parameterCondition = 40;
rulePadGrammarParser.RULE_parameterExpression = 41;
rulePadGrammarParser.RULE_types = 42;
rulePadGrammarParser.RULE_typeCondition = 43;
rulePadGrammarParser.RULE_specifiers = 44;
rulePadGrammarParser.RULE_specifierCondition = 45;
rulePadGrammarParser.RULE_visibilities = 46;
rulePadGrammarParser.RULE_visibilityCondition = 47;
rulePadGrammarParser.RULE_returnValues = 48;
rulePadGrammarParser.RULE_returnValueCondition = 49;
rulePadGrammarParser.RULE_declarationStatements = 50;
rulePadGrammarParser.RULE_declarationStatementOf = 51;
rulePadGrammarParser.RULE_declarationStatementCondition = 52;
rulePadGrammarParser.RULE_declarationStatementExpression = 53;
rulePadGrammarParser.RULE_expressionStatements = 54;
rulePadGrammarParser.RULE_expressionStatementOf = 55;
rulePadGrammarParser.RULE_expressionStatementCondition = 56;
rulePadGrammarParser.RULE_expressionStatementExpression = 57;
rulePadGrammarParser.RULE_value = 58;
rulePadGrammarParser.RULE_valueCondition = 59;
rulePadGrammarParser.RULE_initialValues = 60;
rulePadGrammarParser.RULE_initialValueOf = 61;
rulePadGrammarParser.RULE_initialValueCondition = 62;
rulePadGrammarParser.RULE_classes = 63;
rulePadGrammarParser.RULE_classCondition = 64;
rulePadGrammarParser.RULE_classExpression = 65;
rulePadGrammarParser.RULE_subclasses = 66;
rulePadGrammarParser.RULE_subclassOf = 67;
rulePadGrammarParser.RULE_subclassCondition = 68;
rulePadGrammarParser.RULE_subclassExpression = 69;

function InputSentenceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = rulePadGrammarParser.RULE_inputSentence;
    return this;
}

InputSentenceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InputSentenceContext.prototype.constructor = InputSentenceContext;

InputSentenceContext.prototype.EOF = function() {
    return this.getToken(rulePadGrammarParser.EOF, 0);
};

InputSentenceContext.prototype.mustClause = function() {
    return this.getTypedRuleContext(MustClauseContext,0);
};

InputSentenceContext.prototype.end = function() {
    return this.getTypedRuleContext(EndContext,0);
};

InputSentenceContext.prototype.NL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(rulePadGrammarParser.NL);
    } else {
        return this.getToken(rulePadGrammarParser.NL, i);
    }
};


InputSentenceContext.prototype.emptyLine = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EmptyLineContext);
    } else {
        return this.getTypedRuleContext(EmptyLineContext,i);
    }
};

InputSentenceContext.prototype.enterRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.enterInputSentence(this);
	}
};

InputSentenceContext.prototype.exitRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.exitInputSentence(this);
	}
};




rulePadGrammarParser.InputSentenceContext = InputSentenceContext;

rulePadGrammarParser.prototype.inputSentence = function() {

    var localctx = new InputSentenceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, rulePadGrammarParser.RULE_inputSentence);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 147;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case rulePadGrammarParser.EOF:
        case rulePadGrammarParser.T__6:
        case rulePadGrammarParser.NL:
            this.state = 143;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 140;
                    this.emptyLine(); 
                }
                this.state = 145;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
            }

            break;
        case rulePadGrammarParser.FUNCTION:
        case rulePadGrammarParser.AbstractFunctions:
        case rulePadGrammarParser.CONSTRUCTOR:
        case rulePadGrammarParser.PARAMETER:
        case rulePadGrammarParser.DeclarationStatement:
        case rulePadGrammarParser.CLASSES:
        case rulePadGrammarParser.SUBCLASSES:
            this.state = 146;
            this.mustClause();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 150;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===rulePadGrammarParser.T__6) {
            this.state = 149;
            this.end();
        }

        this.state = 155;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===rulePadGrammarParser.NL) {
            this.state = 152;
            this.match(rulePadGrammarParser.NL);
            this.state = 157;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 158;
        this.match(rulePadGrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MustClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = rulePadGrammarParser.RULE_mustClause;
    return this;
}

MustClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MustClauseContext.prototype.constructor = MustClauseContext;

MustClauseContext.prototype.functions = function() {
    return this.getTypedRuleContext(FunctionsContext,0);
};

MustClauseContext.prototype.must = function() {
    return this.getTypedRuleContext(MustContext,0);
};

MustClauseContext.prototype.have = function() {
    return this.getTypedRuleContext(HaveContext,0);
};

MustClauseContext.prototype.functionExpression = function() {
    return this.getTypedRuleContext(FunctionExpressionContext,0);
};

MustClauseContext.prototype.abstractFunctions = function() {
    return this.getTypedRuleContext(AbstractFunctionsContext,0);
};

MustClauseContext.prototype.abstractFunctionExpression = function() {
    return this.getTypedRuleContext(AbstractFunctionExpressionContext,0);
};

MustClauseContext.prototype.constructors = function() {
    return this.getTypedRuleContext(ConstructorsContext,0);
};

MustClauseContext.prototype.constructorExpression = function() {
    return this.getTypedRuleContext(ConstructorExpressionContext,0);
};

MustClauseContext.prototype.classes = function() {
    return this.getTypedRuleContext(ClassesContext,0);
};

MustClauseContext.prototype.classExpression = function() {
    return this.getTypedRuleContext(ClassExpressionContext,0);
};

MustClauseContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

MustClauseContext.prototype.parameterExpression = function() {
    return this.getTypedRuleContext(ParameterExpressionContext,0);
};

MustClauseContext.prototype.declarationStatements = function() {
    return this.getTypedRuleContext(DeclarationStatementsContext,0);
};

MustClauseContext.prototype.declarationStatementExpression = function() {
    return this.getTypedRuleContext(DeclarationStatementExpressionContext,0);
};

MustClauseContext.prototype.subclasses = function() {
    return this.getTypedRuleContext(SubclassesContext,0);
};

MustClauseContext.prototype.subclassExpression = function() {
    return this.getTypedRuleContext(SubclassExpressionContext,0);
};

MustClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.enterMustClause(this);
	}
};

MustClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.exitMustClause(this);
	}
};




rulePadGrammarParser.MustClauseContext = MustClauseContext;

rulePadGrammarParser.prototype.mustClause = function() {

    var localctx = new MustClauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, rulePadGrammarParser.RULE_mustClause);
    try {
        this.state = 195;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case rulePadGrammarParser.FUNCTION:
            this.enterOuterAlt(localctx, 1);
            this.state = 160;
            this.functions();
            this.state = 161;
            this.must();
            this.state = 162;
            this.have();
            this.state = 163;
            this.functionExpression(0);
            break;
        case rulePadGrammarParser.AbstractFunctions:
            this.enterOuterAlt(localctx, 2);
            this.state = 165;
            this.abstractFunctions();
            this.state = 166;
            this.must();
            this.state = 167;
            this.have();
            this.state = 168;
            this.abstractFunctionExpression(0);
            break;
        case rulePadGrammarParser.CONSTRUCTOR:
            this.enterOuterAlt(localctx, 3);
            this.state = 170;
            this.constructors();
            this.state = 171;
            this.must();
            this.state = 172;
            this.have();
            this.state = 173;
            this.constructorExpression(0);
            break;
        case rulePadGrammarParser.CLASSES:
            this.enterOuterAlt(localctx, 4);
            this.state = 175;
            this.classes();
            this.state = 176;
            this.must();
            this.state = 177;
            this.have();
            this.state = 178;
            this.classExpression(0);
            break;
        case rulePadGrammarParser.PARAMETER:
            this.enterOuterAlt(localctx, 5);
            this.state = 180;
            this.parameters();
            this.state = 181;
            this.must();
            this.state = 182;
            this.have();
            this.state = 183;
            this.parameterExpression(0);
            break;
        case rulePadGrammarParser.DeclarationStatement:
            this.enterOuterAlt(localctx, 6);
            this.state = 185;
            this.declarationStatements();
            this.state = 186;
            this.must();
            this.state = 187;
            this.have();
            this.state = 188;
            this.declarationStatementExpression(0);
            break;
        case rulePadGrammarParser.SUBCLASSES:
            this.enterOuterAlt(localctx, 7);
            this.state = 190;
            this.subclasses();
            this.state = 191;
            this.must();
            this.state = 192;
            this.have();
            this.state = 193;
            this.subclassExpression(0);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = rulePadGrammarParser.RULE_words;
    return this;
}

WordsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordsContext.prototype.constructor = WordsContext;

WordsContext.prototype.word = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WordContext);
    } else {
        return this.getTypedRuleContext(WordContext,i);
    }
};

WordsContext.prototype.enterRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.enterWords(this);
	}
};

WordsContext.prototype.exitRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.exitWords(this);
	}
};




rulePadGrammarParser.WordsContext = WordsContext;

rulePadGrammarParser.prototype.words = function() {

    var localctx = new WordsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, rulePadGrammarParser.RULE_words);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 197;
        this.match(rulePadGrammarParser.T__0);
        this.state = 206;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 204;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 198;
                    this.word();
                    this.state = 199;
                    this.match(rulePadGrammarParser.T__1);
                    break;

                case 2:
                    this.state = 201;
                    this.word();
                    this.state = 202;
                    this.match(rulePadGrammarParser.T__2);
                    break;

                } 
            }
            this.state = 208;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

        this.state = 209;
        this.word();
        this.state = 210;
        this.match(rulePadGrammarParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = rulePadGrammarParser.RULE_word;
    return this;
}

WordContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordContext.prototype.constructor = WordContext;

WordContext.prototype.Alphabet = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(rulePadGrammarParser.Alphabet);
    } else {
        return this.getToken(rulePadGrammarParser.Alphabet, i);
    }
};


WordContext.prototype.enterRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.enterWord(this);
	}
};

WordContext.prototype.exitRule = function(listener) {
    if(listener instanceof rulePadGrammarListener ) {
        listener.exitWord(this);
	}
};




rulePadGrammarParser.WordContext = WordContext;

rulePadGrammarParser.prototype.word = function() {

    var localctx = new WordContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, rulePadGrammarParser.RULE_word);
    var _la = 0; // Token type
    try {
        this.state = 262;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 213; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 212;
                this.match(rulePadGrammarParser.Alphabet);
                this.state = 215; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===rulePadGrammarParser.Alphabet);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 217;
            this.match(rulePadGrammarParser.T__3);
            this.state = 219; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 218;
                this.match(rulePadGrammarParser.Alphabet);
                this.state = 221; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===rulePadGrammarParser.Alphabet);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 223;
            this.match(rulePadGrammarParser.T__4);
            this.state = 225; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 224;
                this.match(rulePadGrammarParser.Alphabet);
                this.state = 227; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===rulePadGrammarParser.Alphabet);
            break;
